--- a/content/assets/css/search/_positioning.scss
+++ b/content/assets/css/search/_positioning.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .search {
 	padding-bottom: 50px;
 
@@ -38,6 +40,11 @@
 	.paging {
 		overflow: hidden;
 		margin: 50px 0 0 150px;
+
+		@media all and (max-width: $container-desktop) {
+			margin-left: 0 !important;
+			padding-left: 0 !important;
+		}
 
 		li {
 			font-size: 18px;
